--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,24 @@
 body {
-    background-color: #F900D7;
+    background-color: #2E85FF;
+}
+
+.container {
+    max-width: 1024px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+h2 {
+    font-family: 'Arial Black';
+    font-size: 12pt;
+    text-align: center;
 }
 
 .title-image {
-    max-width: 1024px;
-    width: 80%;
+    width: 100%;
     height: 20vh;
-    margin: 2vh auto 0 auto;
+    margin: 1vh 0 0 0;
     background-image: url('/cheechbot_header.png');
     background-repeat: no-repeat;
     background-size: contain;
@@ -16,9 +28,6 @@ body {
 
 .chat-frame {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1024px;
     width: 100%;
     height: 70vh;
     background-color: white;
