--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,14 @@ body {
 }
 
 h2 {
-    font-family: 'Arial Black';
-    font-size: 12pt;
+    font-family: 'Arial';
+    font-size: 10pt;
     text-align: center;
 }
 
 .title-image {
     width: 100%;
-    height: 10vh;
+    height: 15vh;
     margin: 1vh 0 0 0;
     background-image: url('/cheechbot_header.png');
     background-repeat: no-repeat;
@@ -29,6 +29,15 @@ h2 {
 .chat-frame {
     display: block;
     width: 100%;
-    height: 80vh;
+    height: 75vh;
     background-color: white;
+}
+
+@media only screen and (max-width: 768px) {
+    .title-image {
+        height: 10vh;
+    }
+    .chat-frame {
+        height: 80vh;
+    }
 }
